--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cyrus-edge-worker",
-  "version": "0.0.18-alpha.0",
+  "version": "0.0.18-alpha.1",
   "description": "Unified edge worker for processing Linear issues with Claude",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "prompt-template-v2.md"
+    "prompt-template-v2.md",
+    "prompts"
   ],
   "scripts": {
     "build": "tsc",
