Fix: Add all missing prompt template files to edge-worker package
- Added label-prompt-template.md and prompt-template.md to package files
- Bumped edge-worker version to 0.0.18-alpha.2
- Bumped CLI version to 0.1.35-alpha.2

This fixes the remaining ENOENT errors for missing prompt template files.

--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyrus-edge-worker",
-  "version": "0.0.18-alpha.1",
+  "version": "0.0.18-alpha.2",
   "description": "Unified edge worker for processing Linear issues with Claude",
   "type": "module",
   "main": "dist/index.js",
@@ -8,6 +8,8 @@
   "files": [
     "dist",
     "prompt-template-v2.md",
+    "prompt-template.md",
+    "label-prompt-template.md",
     "prompts"
   ],
   "scripts": {
