--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyrus-ai",
-  "version": "0.1.35-alpha.2",
+  "version": "0.1.36",
   "description": "AI-powered Linear issue automation using Claude",
   "main": "dist/app.js",
   "types": "dist/app.d.ts",
