--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyrus-edge-worker",
-  "version": "0.0.18-alpha.2",
+  "version": "0.0.19",
   "description": "Unified edge worker for processing Linear issues with Claude",
   "type": "module",
   "main": "dist/index.js",
