--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyrus-core",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7",
   "description": "Core business logic for Cyrus",
   "type": "module",
   "main": "dist/index.js",
