feat: Add dynamic package instantiation for webhook client
- Added conditional logic to use linear-webhook-client when LINEAR_DIRECT_WEBHOOKS=true
- Modified EdgeWorker to dynamically choose between NdjsonClient and LinearWebhookClient
- Added linear-webhook-client package with minimal package.json for dist files
- Updated edge-worker dependencies to include linear-webhook-client
- Maintains full backward compatibility with existing deployments

When LINEAR_DIRECT_WEBHOOKS environment variable is set to 'true', the system
will use the LinearWebhookClient for direct webhook forwarding. Otherwise,
it continues to use the existing NdjsonClient for proxy-based handling.

--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -26,6 +26,7 @@
 		"@ngrok/ngrok": "^1.5.1",
 		"cyrus-claude-runner": "workspace:*",
 		"cyrus-core": "workspace:*",
+		"cyrus-linear-webhook-client": "workspace:*",
 		"cyrus-ndjson-client": "workspace:*",
 		"file-type": "^18.7.0"
 	},
