feat: add prompt management tui

--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -3,8 +3,9 @@
 	"compilerOptions": {
 		"outDir": "./dist",
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "NodeNext",
+		"jsx": "react-jsx"
 	},
-	"include": ["*.ts"],
+	"include": ["*.ts", "*.tsx"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
