--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -49,12 +49,16 @@
 		"express": "^5.1.0",
 		"file-type": "^21.0.0",
 		"fs-extra": "^11.3.0",
+		"ink": "^4.4.1",
+		"ink-text-input": "^5.0.1",
 		"node-fetch": "^2.7.0",
 		"open": "^10.0.0",
+		"react": "^18.3.1",
 		"zod": "^3.24.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20.0.0",
+		"@types/react": "^18.3.8",
 		"@vitest/ui": "^3.1.4",
 		"nodemon": "^2.0.22",
 		"typescript": "^5.3.3",
