--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.31",
 	"description": "Unified edge worker for processing Linear issues with Claude",
 	"type": "module",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"main": "dist/edge-worker/src/index.js",
+	"types": "dist/edge-worker/src/index.d.ts",
 	"files": [
 		"dist",
 		"prompt-template-v2.md",
