chore: rely on upstream ink types

--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -6,6 +6,6 @@
 		"moduleResolution": "NodeNext",
 		"jsx": "react-jsx"
 	},
-	"include": ["*.ts", "*.tsx", "types/**/*.d.ts"],
+	"include": ["*.ts", "*.tsx"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
