Restore linear-webhook-client build script

--- a/packages/linear-webhook-client/package.json
+++ b/packages/linear-webhook-client/package.json
@@ -9,7 +9,7 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsc",
+		"build": "echo 'Using pre-built dist files'",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
