--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
     
     - name: Upload coverage
       uses: codecov/codecov-action@v3
+      continue-on-error: true
       with:
         directory: ./coverage/
         fail_ci_if_error: false
