fix(tests): resolve CI test failures in edge-worker package
- Add postbuild script to cyrus-core package.json to fix dist structure
- Update AgentSessionManager.completeSession to always post result entries when no procedure router
- Add postRoutingThought and postProcedureSelectionThought to test mocks
- Fix EdgeWorker.codex-integration.test.ts by manually setting agentSessionManager

All 121 tests in 18 test files now passing.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,8 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && npm run postbuild",
+		"postbuild": "if [ -d dist/core/src ]; then cp -r dist/core/src/* dist/ && rm -rf dist/core dist/claude-runner; fi",
 		"dev": "tsc --watch",
 		"test": "vitest",
 		"test:run": "vitest run --passWithNoTests",
