--- a/packages/cloudflare-tunnel-client/package.json
+++ b/packages/cloudflare-tunnel-client/package.json
@@ -16,7 +16,7 @@
 		"dev": "tsc --watch",
 		"typecheck": "tsc --noEmit",
 		"test": "vitest",
-		"test:run": "vitest run"
+		"test:run": "vitest run --passWithNoTests"
 	},
 	"dependencies": {
 		"cloudflared": "^0.7.1",
