--- a/packages/cloudflare-tunnel-client/package.json
+++ b/packages/cloudflare-tunnel-client/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cyrus-cloudflare-tunnel-client",
 	"version": "0.1.0",
-	"description": "Cloudflare tunnel client for receiving config updates and webhooks from cyrus-hosted",
+	"description": "Cloudflare tunnel client for receiving webhooks from cyrus-hosted",
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
