--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -15,6 +15,9 @@
 		"test:run": "vitest run --passWithNoTests",
 		"typecheck": "tsc --noEmit"
 	},
+	"dependencies": {
+		"@linear/sdk": "^60.0.0"
+	},
 	"devDependencies": {
 		"@types/node": "^20.0.0",
 		"typescript": "^5.3.3",
