--- a/packages/linear-event-transport/package.json
+++ b/packages/linear-event-transport/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@linear/sdk": "^58.0.0",
+		"cyrus-core": "workspace:*",
 		"fastify": "^5.2.0"
 	},
 	"devDependencies": {
