--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cyrus-core",
-	"version": "0.2.0-rc.5",
+	"version": "0.2.0",
 	"description": "Core business logic for Cyrus",
 	"type": "module",
 	"main": "dist/index.js",
