Fix platform-agnostic label access in EdgeWorker
- Fixed 4 locations where labels were accessed as arrays instead of using platform detection
- Added runtime typeof checks to handle both Linear SDK (function) and CLI (array) platforms
- Lines fixed: 1452, 3678, 4499, 4836
- All TypeScript compilation errors resolved
- Maintains platform-agnostic architecture while handling both implementations

--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -34,7 +34,9 @@
 		"cyrus-linear-event-transport": "workspace:*",
 		"cyrus-simple-agent-runner": "workspace:*",
 		"fastify": "^5.2.0",
-		"file-type": "^18.7.0"
+		"file-type": "^18.7.0",
+		"fs-extra": "^11.3.0",
+		"zod": "^3.23.0"
 	},
 	"devDependencies": {
 		"@types/fs-extra": "^11.0.4",
