feat: Add CLI platform support on top of IIssueTrackerService foundation
This PR adds CLI-specific adapters and tools that build on the IIssueTrackerService
foundation established in the previous PR.

Key changes:
- CLI-specific issue tracker adapters (CLIIssueTrackerService, CLIRPCServer, CLIEventTransport)
- Platform-aware EdgeWorker configuration (config.platform === "cli" checks)
- New CLI tools: basic-issue-tracker, cli-extended-mcp-tools
- ConfigUpdater for dynamic configuration management
- Cloudflare tunnel client for secure communication
- F1 CLI tool for Linear interaction
- Apps/CLI restructure with command pattern

This is part 2 of CYPACK-388 - stacked on top of part 1's IIssueTrackerService foundation.

Related: CYPACK-388, CYPACK-306

--- a/apps/f1/tsconfig.json
+++ b/apps/f1/tsconfig.json
@@ -3,8 +3,9 @@
 	"compilerOptions": {
 		"outDir": "./dist",
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "NodeNext",
+		"types": ["node"]
 	},
-	"include": ["*.ts", "src/**/*.ts"],
+	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
