feat: Add IIssueTrackerService interface and LinearIssueTracker implementation
This PR introduces the foundation for platform-agnostic issue tracking by adding
the IIssueTrackerService interface and implementing it for Linear.

Key changes:
- New IIssueTrackerService interface in cyrus-core for platform-agnostic issue tracking
- LinearIssueTrackerService implementation using Linear SDK
- New cyrus-linear-event-transport package replacing cyrus-linear-webhook-client
- RepositoryRouter for intelligent repository selection and routing
- EdgeWorker refactored to use IIssueTrackerService interface
- Removed cyrus-ndjson-client package (no longer needed)

This is part 1 of CYPACK-388 - the foundation without CLI platform support.
Part 2 will add CLI-specific adapters and tools on top of this foundation.

Related: CYPACK-388

--- a/packages/linear-event-transport/package.json
+++ b/packages/linear-event-transport/package.json
@@ -14,7 +14,8 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@linear/sdk": "^58.0.0",
+		"@linear/sdk": "^60.0.0",
+		"cyrus-core": "workspace:*",
 		"fastify": "^5.2.0"
 	},
 	"devDependencies": {
