Refactor ClaudeRunner to implement IAgentRunner interface
- Add cyrus-core as workspace dependency in package.json
- Import and implement IAgentRunner interface in ClaudeRunner class
- Add TypeScript path mappings to resolve circular dependencies in monorepo
  - Updated claude-runner, core, edge-worker, and CLI tsconfig.json files
  - Enables TypeScript to find module declarations during development
- All existing tests pass (66 tests)
- No breaking changes to external API

CYPACK-407

--- a/packages/edge-worker/tsconfig.json
+++ b/packages/edge-worker/tsconfig.json
@@ -3,7 +3,14 @@
 	"compilerOptions": {
 		"outDir": "./dist",
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "NodeNext",
+		"baseUrl": "../../",
+		"paths": {
+			"cyrus-core": ["packages/core/src"],
+			"cyrus-claude-runner": ["packages/claude-runner/src"],
+			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"],
+			"cyrus-config-updater": ["packages/config-updater/src"]
+		}
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"]
