--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -3,7 +3,15 @@
 	"compilerOptions": {
 		"outDir": "./dist",
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "NodeNext",
+		"baseUrl": "../../",
+		"paths": {
+			"cyrus-core": ["packages/core/src"],
+			"cyrus-claude-runner": ["packages/claude-runner/src"],
+			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"],
+			"cyrus-config-updater": ["packages/config-updater/src"],
+			"cyrus-edge-worker": ["packages/edge-worker/src"]
+		}
 	},
 	"include": ["*.ts", "src/**/*.ts"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"]
