feat: create SimpleGeminiRunner for enumerated response use cases
- Implement SimpleGeminiRunner extending SimpleAgentRunner<T>
- Use GeminiRunner internally for agent execution
- Implement executeAgent() and extractResponse() abstract methods
- Support validResponse enumeration pattern matching SimpleClaudeRunner
- Add comprehensive JSDoc documentation
- Export from gemini-runner package index
- Add cyrus-simple-agent-runner dependency
- Create test script and implementation documentation

Resolves CYPACK-410

--- a/packages/gemini-runner/tsconfig.json
+++ b/packages/gemini-runner/tsconfig.json
@@ -7,7 +7,8 @@
 		"baseUrl": "../../",
 		"paths": {
 			"cyrus-core": ["packages/core/src"],
-			"cyrus-gemini-runner": ["packages/gemini-runner/src"]
+			"cyrus-gemini-runner": ["packages/gemini-runner/src"],
+			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"]
 		}
 	},
 	"include": ["src/**/*"],
