--- a/packages/gemini-runner/package.json
+++ b/packages/gemini-runner/package.json
@@ -19,6 +19,7 @@
 		"@linear/sdk": "^60.0.0",
 		"cyrus-claude-runner": "workspace:*",
 		"cyrus-core": "workspace:*",
+		"cyrus-simple-agent-runner": "workspace:*",
 		"dotenv": "^16.6.1",
 		"fs-extra": "^11.3.0",
 		"zod": "^3.23.0"
