--- a/packages/gemini-runner/package.json
+++ b/packages/gemini-runner/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@linear/sdk": "^60.0.0",
+		"cyrus-claude-runner": "workspace:*",
 		"cyrus-core": "workspace:*",
 		"dotenv": "^16.6.1",
 		"fs-extra": "^11.3.0",
