feat: change default runner to GeminiRunner for testing
- Add cyrus-gemini-runner dependency to edge-worker package
- Replace ClaudeRunner instantiations with GeminiRunner
- Keep ClaudeRunner import for type casting streaming methods

--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -30,6 +30,7 @@
 		"cyrus-cloudflare-tunnel-client": "workspace:*",
 		"cyrus-config-updater": "workspace:*",
 		"cyrus-core": "workspace:*",
+		"cyrus-gemini-runner": "workspace:*",
 		"cyrus-linear-event-transport": "workspace:*",
 		"cyrus-simple-agent-runner": "workspace:*",
 		"fastify": "^5.2.0",
