--- a/packages/simple-agent-runner/tsconfig.json
+++ b/packages/simple-agent-runner/tsconfig.json
@@ -1,9 +1,16 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
+		"rootDir": "src",
 		"outDir": "./dist",
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "NodeNext",
+		"baseUrl": "../../",
+		"paths": {
+			"cyrus-core": ["packages/core/src"],
+			"cyrus-claude-runner": ["packages/claude-runner/src"],
+			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"]
+		}
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"]
