--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,9 +17,7 @@
 	},
 	"dependencies": {
 		"@anthropic-ai/claude-agent-sdk": "^0.1.42",
-		"@linear/sdk": "^64.0.0",
-		"cyrus-claude-runner": "workspace:*",
-		"cyrus-simple-agent-runner": "workspace:*"
+		"@linear/sdk": "^64.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20.0.0",
