--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,13 +4,7 @@
 		"rootDir": "src",
 		"outDir": "dist",
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
-		"baseUrl": "../../",
-		"paths": {
-			"cyrus-core": ["packages/core/src"],
-			"cyrus-claude-runner": ["packages/claude-runner/src"],
-			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"]
-		}
+		"moduleResolution": "NodeNext"
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
