--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.3",
+		"@openai/codex-sdk": "^0.63.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.1.6",
 		"typescript": "^5.3.3"
