--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,7 +25,8 @@
 			"cyrus-linear-client": ["packages/linear-client"],
 			"cyrus-history-stream": ["packages/history-stream"],
 			"cyrus-edge-worker": ["packages/edge-worker"],
-			"cyrus-claude-runner": ["packages/claude-runner"]
+			"cyrus-claude-runner": ["packages/claude-runner"],
+			"cyrus-codex-runner": ["packages/codex-runner/src/index.ts"]
 		}
 	},
 	"exclude": ["node_modules", "dist", "build"]
