Switch codex runner to SDK and add agent/model selectors

--- a/packages/codex-runner/package.json
+++ b/packages/codex-runner/package.json
@@ -16,6 +16,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@openai/codex-sdk": "^0.98.0",
 		"cyrus-claude-runner": "workspace:*",
 		"cyrus-core": "workspace:*"
 	},
