feat(runners): add codex/cursor harness support and F1 validation

--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -28,6 +28,8 @@
 		"chokidar": "^4.0.3",
 		"cyrus-claude-runner": "workspace:*",
 		"cyrus-cloudflare-tunnel-client": "workspace:*",
+		"cyrus-codex-runner": "workspace:*",
+		"cyrus-cursor-runner": "workspace:*",
 		"cyrus-config-updater": "workspace:*",
 		"cyrus-core": "workspace:*",
 		"cyrus-gemini-runner": "workspace:*",
