--- a/packages/edge-worker/tsconfig.json
+++ b/packages/edge-worker/tsconfig.json
@@ -8,6 +8,11 @@
 		"paths": {
 			"cyrus-core": ["packages/core/src"],
 			"cyrus-claude-runner": ["packages/claude-runner/src"],
+			"cyrus-codex-runner": [
+				"../repos/cyrus/packages/codex-runner/dist/index.d.ts"
+			],
+			"cyrus-cursor-runner": ["packages/cursor-runner/dist/index.d.ts"],
+			"cyrus-gemini-runner": ["packages/gemini-runner/src"],
 			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"],
 			"cyrus-config-updater": ["packages/config-updater/src"]
 		}
