Fix cursor harness verification regressions

--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -10,7 +10,9 @@
 			"cyrus-claude-runner": ["packages/claude-runner/src"],
 			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"],
 			"cyrus-config-updater": ["packages/config-updater/src"],
-			"cyrus-edge-worker": ["packages/edge-worker/src"]
+			"cyrus-edge-worker": [
+				"packages/edge-worker/dist/edge-worker/src/index.d.ts"
+			]
 		}
 	},
 	"include": ["*.ts", "src/**/*.ts"],
