--- a/apps/f1/tsconfig.json
+++ b/apps/f1/tsconfig.json
@@ -7,8 +7,10 @@
 		"moduleResolution": "NodeNext",
 		"baseUrl": "../../",
 		"paths": {
-			"cyrus-core": ["packages/core/src"],
-			"cyrus-edge-worker": ["packages/edge-worker/src"]
+			"cyrus-core": ["packages/core/dist/index.d.ts"],
+			"cyrus-edge-worker": [
+				"packages/edge-worker/dist/edge-worker/src/index.d.ts"
+			]
 		}
 	},
 	"include": ["src/**/*.ts", "server.ts"],
