--- a/packages/edge-worker/tsconfig.json
+++ b/packages/edge-worker/tsconfig.json
@@ -6,12 +6,9 @@
 		"moduleResolution": "NodeNext",
 		"baseUrl": "../../",
 		"paths": {
-			"cyrus-core": ["packages/core/src"],
-			"cyrus-claude-runner": ["packages/claude-runner/src"],
-			"cyrus-codex-runner": ["packages/codex-runner/src"],
-			"cyrus-gemini-runner": ["packages/gemini-runner/src"],
-			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"],
-			"cyrus-config-updater": ["packages/config-updater/src"]
+			"cyrus-cursor-runner": ["packages/cursor-runner/src/index.ts"],
+			"cyrus-gemini-runner": ["packages/gemini-runner/src/index.ts"],
+			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src/index.ts"]
 		}
 	},
 	"include": ["src/**/*"],
