--- a/packages/gemini-runner/tsconfig.json
+++ b/packages/gemini-runner/tsconfig.json
@@ -6,9 +6,9 @@
 		"moduleResolution": "NodeNext",
 		"baseUrl": "../../",
 		"paths": {
-			"cyrus-core": ["packages/core/src"],
-			"cyrus-gemini-runner": ["packages/gemini-runner/src"],
-			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src"]
+			"cyrus-core": ["packages/core/src/index.ts"],
+			"cyrus-gemini-runner": ["packages/gemini-runner/src/index.ts"],
+			"cyrus-simple-agent-runner": ["packages/simple-agent-runner/src/index.ts"]
 		}
 	},
 	"include": ["src/**/*"],
