--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -34,6 +34,7 @@
 		"cyrus-cursor-runner": "workspace:*",
 		"cyrus-gemini-runner": "workspace:*",
 		"cyrus-linear-event-transport": "workspace:*",
+		"cyrus-mcp-tools": "workspace:*",
 		"cyrus-simple-agent-runner": "workspace:*",
 		"fastify": "^5.7.3",
 		"fastify-mcp": "^2.1.0",
