feat: secure cyrus-tools MCP auth and codex MCP header mapping (CYPACK-817) (#870)
* chore: initialize draft PR for CYPACK-817

* feat(edge-worker): serve cyrus tools via Fastify MCP (CYPACK-817)

* refactor: move cyrus tools server and tests to mcp-tools

* fix(edge-worker): resolve cyrus-mcp-tools as package for builds

* feat(runners): pass MCP configs to gemini cursor codex

* feat(edge-worker): enforce CYRUS_API_KEY auth for cyrus-tools MCP

* fix(codex-runner): map MCP auth headers for HTTP servers

--- a/packages/edge-worker/package.json
+++ b/packages/edge-worker/package.json
@@ -29,13 +29,15 @@
 		"cyrus-claude-runner": "workspace:*",
 		"cyrus-cloudflare-tunnel-client": "workspace:*",
 		"cyrus-codex-runner": "workspace:*",
-		"cyrus-cursor-runner": "workspace:*",
 		"cyrus-config-updater": "workspace:*",
 		"cyrus-core": "workspace:*",
+		"cyrus-cursor-runner": "workspace:*",
 		"cyrus-gemini-runner": "workspace:*",
 		"cyrus-linear-event-transport": "workspace:*",
+		"cyrus-mcp-tools": "workspace:*",
 		"cyrus-simple-agent-runner": "workspace:*",
 		"fastify": "^5.7.3",
+		"fastify-mcp": "^2.1.0",
 		"file-type": "^18.7.0",
 		"ignore": "^7.0.5",
 		"zod": "4.3.5"
