--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,7 @@
 			"cyrus-codex-runner": ["packages/codex-runner"],
 			"cyrus-cursor-runner": ["packages/cursor-runner"],
 			"cyrus-gemini-runner": ["packages/gemini-runner"],
+			"cyrus-mcp-tools": ["packages/mcp-tools"],
 			"cyrus-simple-agent-runner": ["packages/simple-agent-runner"],
 			"cyrus-config-updater": ["packages/config-updater"],
 			"cyrus-linear-event-transport": ["packages/linear-event-transport"]
